# CBQueue

./: .gitignore  CBQueue.cbp  CBQueue.depend  CBQueue.layout  CMakeLists.txt  README.md  cbqadapter.cpp  cbqadapter.hpp  cbqbuildconf.h  cbqcallbacks.c  cbqcallbacks.h  cbqcapacity.c  cbqcapacity.h  cbqcontainer.c  cbqcontainer.h  cbqdebug.c  cbqdebug.h  cbqlocal.h  cbqt_gamefly.c  cbqt_gamefly.h  cbqtbase.c  cbqtest.c  cbqtest.h  cbqueue.c  cbqueue.h  cbqueue_as  cbqversion.c  cbqversion.h  cbqwrapper.hpp  gmon.out  main.c  main.cpp
concept/: queue scheme src.pdn
examples/: basic_using.c  hello_world.c  hello_world.cpp  static_arguments.c  static_arguments.cpp  variadic_arguments.c
